updates to fix some layout bugs in mobile

--- a/04-billing-cycles/src/styles/component-styles/Modal.css
+++ b/04-billing-cycles/src/styles/component-styles/Modal.css
@@ -1,7 +1,7 @@
 /*Início - Modal de exclusão*/
 .modal-overlay {
-    @apply w-screen overflow-auto p-4 min-h-screen bg-slate-800/70 fixed top-0
-    left-0 items-center opacity-0 flex animate-showModal z-20 justify-start;
+    @apply fixed top-0 left-0 w-screen p-4 h-screen bg-slate-800/70
+    items-center opacity-0 flex animate-showModal z-20 justify-start;
     @apply xxs:justify-center;
 }
 
